# Mixnet

./: .gitignore  Dockerfile  README.md  build_proto.sh  docker-compose.yml  generate_config.py  main.py  pyproject.toml  setup.sh
client/: client.py  mixnet_pb2.py  mixnet_pb2_grpc.py  server.py  tmp_client.py
config/: config.yaml  generate_config.py  local-config.yaml
protos/: mixnet.proto
src/: client.py  main.py  mixnet.proto  mixnet_pb2.py  mixnet_pb2_grpc.py  models.py  server.py
src/mixnet/: benchmarks.py  cli.py  client.py  crypto.py  local_flow.py  main.py  mixnet_pb2.py  mixnet_pb2_grpc.py  models.py  server.py
tests/: test_code.py  test_crypto.py  test_main.py
