[project]
name = "mixnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.73.0",
    "grpcio-tools>=1.73.0",
    "pydantic>=2.11.7",
    "pynacl>=1.5.0",
    "typer>=0.16.0",
]

[project.scripts]
mixnet = "mixnet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "types-protobuf>=6.30.2.20250516",
    "types-pyyaml>=6.0.12.20250516",
]
